--- a/HelloWeb/HelloWeb/Views/Home/Index.cshtml
+++ b/HelloWeb/HelloWeb/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 
 <div class="jumbotron">
     <h1>Hello Web!</h1>
-    <p class="lead">Hello web is a lovely squirrel web app. It displays the might of the squirrel, in its' natural habitat.</p>
+    <p class="lead">Hello web is a lovely squirrel web app. It displays the might of the squirrel, in its' natural habitat. The squirrel last ate at: 2:22PM, 7/13/2017</p>
     <img src="~/Content/Squirrel.jpg"/>
 </div>
